tests/errors/vector-trait-method-param-runtime-abi.ari
trait UsesVec {
  fn take(values: Vec[i64]) -> i64
}

fn main() -> i64 {
  return 0;
}
